// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bucket is public 1`] = `
{
  "resource": {
    "google_project_service": {
      "my_bucket_IamServiceAccountCredentialsApi_0618BD85": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_storage_bucket": {
      "my_bucket": {
        "depends_on": [
          "google_project_service.my_bucket_IamServiceAccountCredentialsApi_0618BD85",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "my_bucket-\${random_id.my_bucket_Id_50F73A6B.hex}",
        "public_access_prevention": "inherited",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_iam_member": {
      "my_bucket_PublicAccessIamMember_F45C9FFA": {
        "bucket": "\${google_storage_bucket.my_bucket.name}",
        "member": "allUsers",
        "role": "roles/storage.objectViewer",
      },
    },
    "random_id": {
      "my_bucket_Id_50F73A6B": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`bucket is public 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "IamServiceAccountCredentialsApi": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "IamServiceAccountCredentialsApi",
                    "path": "root/Default/my_bucket/IamServiceAccountCredentialsApi",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                  "PublicAccessIamMember": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "PublicAccessIamMember",
                    "path": "root/Default/my_bucket/PublicAccessIamMember",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight files 1`] = `
{
  "resource": {
    "google_project_service": {
      "my_bucket_IamServiceAccountCredentialsApi_0618BD85": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_storage_bucket": {
      "my_bucket": {
        "depends_on": [
          "google_project_service.my_bucket_IamServiceAccountCredentialsApi_0618BD85",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "my_bucket-\${random_id.my_bucket_Id_50F73A6B.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_object": {
      "my_bucket_Object-file1txt_F3CECCDA": {
        "bucket": "\${google_storage_bucket.my_bucket.id}",
        "content": "test1",
        "name": "file1.txt",
      },
      "my_bucket_Object-file2txt_DA15A080": {
        "bucket": "\${google_storage_bucket.my_bucket.id}",
        "content": "test2",
        "name": "file2.txt",
      },
    },
    "random_id": {
      "my_bucket_Id_50F73A6B": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`bucket with two preflight files 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "IamServiceAccountCredentialsApi": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "IamServiceAccountCredentialsApi",
                    "path": "root/Default/my_bucket/IamServiceAccountCredentialsApi",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                  "Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Object-file1.txt",
                    "path": "root/Default/my_bucket/Object-file1.txt",
                  },
                  "Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Object-file2.txt",
                    "path": "root/Default/my_bucket/Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`bucket with two preflight objects 1`] = `
{
  "resource": {
    "google_project_service": {
      "my_bucket_IamServiceAccountCredentialsApi_0618BD85": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_storage_bucket": {
      "my_bucket": {
        "depends_on": [
          "google_project_service.my_bucket_IamServiceAccountCredentialsApi_0618BD85",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "my_bucket-\${random_id.my_bucket_Id_50F73A6B.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "google_storage_bucket_object": {
      "my_bucket_Object-file1txt_F3CECCDA": {
        "bucket": "\${google_storage_bucket.my_bucket.id}",
        "content": "hello world",
        "name": "file1.txt",
      },
      "my_bucket_Object-file2txt_DA15A080": {
        "bucket": "\${google_storage_bucket.my_bucket.id}",
        "content": "boom bam",
        "name": "file2.txt",
      },
    },
    "random_id": {
      "my_bucket_Id_50F73A6B": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`bucket with two preflight objects 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "IamServiceAccountCredentialsApi": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "IamServiceAccountCredentialsApi",
                    "path": "root/Default/my_bucket/IamServiceAccountCredentialsApi",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                  "Object-file1.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Object-file1.txt",
                    "path": "root/Default/my_bucket/Object-file1.txt",
                  },
                  "Object-file2.txt": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Object-file2.txt",
                    "path": "root/Default/my_bucket/Object-file2.txt",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`create a bucket 1`] = `
{
  "resource": {
    "google_project_service": {
      "my_bucket_IamServiceAccountCredentialsApi_0618BD85": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_storage_bucket": {
      "my_bucket": {
        "depends_on": [
          "google_project_service.my_bucket_IamServiceAccountCredentialsApi_0618BD85",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "my_bucket-\${random_id.my_bucket_Id_50F73A6B.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "random_id": {
      "my_bucket_Id_50F73A6B": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`create a bucket 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket/Default",
                  },
                  "IamServiceAccountCredentialsApi": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "IamServiceAccountCredentialsApi",
                    "path": "root/Default/my_bucket/IamServiceAccountCredentialsApi",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket/Id",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket",
                "path": "root/Default/my_bucket",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;

exports[`two buckets 1`] = `
{
  "resource": {
    "google_project_service": {
      "my_bucket1_IamServiceAccountCredentialsApi_5EA21318": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
      "my_bucket2_IamServiceAccountCredentialsApi_4C3E6B90": {
        "disable_dependent_services": false,
        "disable_on_destroy": false,
        "service": "iamcredentials.googleapis.com",
      },
    },
    "google_storage_bucket": {
      "my_bucket1": {
        "depends_on": [
          "google_project_service.my_bucket1_IamServiceAccountCredentialsApi_5EA21318",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "my_bucket1-\${random_id.my_bucket1_Id_D79FE240.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
      "my_bucket2": {
        "depends_on": [
          "google_project_service.my_bucket2_IamServiceAccountCredentialsApi_4C3E6B90",
        ],
        "force_destroy": false,
        "location": "us-central1",
        "name": "my_bucket2-\${random_id.my_bucket2_Id_0AB96F49.hex}",
        "public_access_prevention": "enforced",
        "uniform_bucket_level_access": true,
      },
    },
    "random_id": {
      "my_bucket1_Id_D79FE240": {
        "byte_length": 4,
      },
      "my_bucket2_Id_0AB96F49": {
        "byte_length": 4,
      },
    },
  },
}
`;

exports[`two buckets 2`] = `
{
  "tree": {
    "children": {
      "root": {
        "children": {
          "Default": {
            "children": {
              "google": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "google",
                "path": "root/Default/google",
              },
              "my_bucket1": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket1/Default",
                  },
                  "IamServiceAccountCredentialsApi": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "IamServiceAccountCredentialsApi",
                    "path": "root/Default/my_bucket1/IamServiceAccountCredentialsApi",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket1/Id",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket1",
                "path": "root/Default/my_bucket1",
              },
              "my_bucket2": {
                "children": {
                  "Default": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Default",
                    "path": "root/Default/my_bucket2/Default",
                  },
                  "IamServiceAccountCredentialsApi": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "IamServiceAccountCredentialsApi",
                    "path": "root/Default/my_bucket2/IamServiceAccountCredentialsApi",
                  },
                  "Id": {
                    "constructInfo": {
                      "fqn": "cdktf.TerraformResource",
                      "version": "0.20.3",
                    },
                    "id": "Id",
                    "path": "root/Default/my_bucket2/Id",
                  },
                },
                "constructInfo": {
                  "fqn": "constructs.Construct",
                  "version": "10.3.0",
                },
                "display": {
                  "description": "A cloud object store",
                  "title": "Bucket",
                },
                "id": "my_bucket2",
                "path": "root/Default/my_bucket2",
              },
              "random": {
                "constructInfo": {
                  "fqn": "cdktf.TerraformProvider",
                  "version": "0.20.3",
                },
                "id": "random",
                "path": "root/Default/random",
              },
            },
            "constructInfo": {
              "fqn": "constructs.Construct",
              "version": "10.3.0",
            },
            "id": "Default",
            "path": "root/Default",
          },
          "backend": {
            "constructInfo": {
              "fqn": "cdktf.LocalBackend",
              "version": "0.20.3",
            },
            "id": "backend",
            "path": "root/backend",
          },
        },
        "constructInfo": {
          "fqn": "cdktf.TerraformStack",
          "version": "0.20.3",
        },
        "id": "root",
        "path": "root",
      },
    },
    "constructInfo": {
      "fqn": "cdktf.App",
      "version": "0.20.3",
    },
    "id": "App",
    "path": "",
  },
  "version": "tree-0.1",
}
`;
